# AgentSkillsArxiv

./: .gitignore  .gitmodules  README.md  academic-rebuttal.skill  install-mcp-servers.sh  install.sh  meeting-summary.skill  openviking.skill
.github/workflows/: mcp-compliance-tests.yml
academic-rebuttal/: SKILL.md
academic-rebuttal/references/: venue_policies.md
academic-reviewer/: SKILL.md
academic-reviewer/references/: common_paper_weaknesses.md
academic-writing/: SKILL.md
academic-writing/references/: citation_styles.md
acamedic-writing/: SKILL.md
acamedic-writing/references/: citation_styles.md  figures_tables.md  writing_principles.md
artifacts/skills/: academic-grant-proposal.skill  (+3 more)
ast-grep/: SKILL.md
ast-grep-mcp-server/: package-lock.json  package.json
better-grep/: SKILL.md
citation-convert/: SKILL.md
conference-plot/: SKILL.md
fdep-mcp-server/: README.md
function-dep-search/: SKILL.md
mcp-compliance/: baseline-policy.json
mcp/fdep-mcp-server/: evaluation.xml  pyproject.toml
mcp/fdep-mcp-server/fdep_mcp/: tools.py
mcp/fdep-mcp-server/tests/: __init__.py
mcp/mem0-mcp-server/: README.md  pyproject.toml
mcp/mem0-mcp-server/mem0_mcp/: __init__.py  __main__.py  config.py  server.py  tools.py
mcp/mem0-mcp-server/scripts/: export_sessions.py  validate_filters.py
mcp/mem0-mcp-server/tests/: test_tools.py
openclaw/: SKILL.md
openclaw-remote-bridge/: SKILL.md
openclaw-remote-dispatch/: SKILL.md  setup.sh
opencode-pre-read-distillation/: README.md  package.json  prd.jsonc  prd.schema.json  tsconfig.json
(+293 files in other folders)
