[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mem0-mcp-server"
version = "0.1.0"
description = "MCP server providing persistent AI memory via mem0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "mem0ai>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
